# DarkTube

./: AGENTS.md  AI_ANALISIS.md  AI_ANALISIS2.md  BUILD_COMMAND.md  CMakeLists.txt  DarkTube.nro  DarkTube.pfs0  MEMORY_AGENTS.md  Makefile  NEW_API.md  README.md  install_custom_pkgs.sh
darktube/include/core/: theme.hpp
darktube/include/data/: ip_repository.hpp
darktube/include/presentation/: home_activity.hpp  player_activity.hpp  ui_utils.hpp
darktube/include/view/: mpv_core.hpp
darktube/source/: ffmpeg_stubs.cpp  main.cpp
darktube/source/data/: ip_repository.cpp  network_client.cpp
darktube/source/presentation/: home_activity.cpp  player_activity.cpp
darktube/source/view/: mpv_core.cpp
resources/i18n/en-US/: main.json
resources/i18n/id-ID/: hints.json  main.json
source/: api.c  api.h  json_parser.c  json_parser.h  main.c  network.c  network.h  player.c  player.h  ui.c  ui.h
